non-msrv-tests/tests/ui/duplicate_option.stderr
error: duplicate `default` option
 --> tests/ui/duplicate_option.rs:4:26
  |
4 |     #[derive_where(default, default)]
  |                             ^^^^^^^

error: duplicate `default` option
  --> tests/ui/duplicate_option.rs:12:17
   |
12 |     #[derive_where(default)]
   |                    ^^^^^^^
